view/index.css
* {
    margin: 0;
    border: 0;
    padding: 0;

    box-sizing: border-box;

    font-family: 'MS Sans Serif';
    /* font-family: 'Segoe UI'; */

    --text: #141414;
    --text-secondary: #161616;
    --background-primary: #D4D0C7;
    --background-secondary: #242423;
    --trim: #f0ede8;

    --primary: #98add9;
    --secondary: #4f6187;
    --accent: #bc95c9;

    --font-size-default: 13px;

    --item-offset-left: 28px;
    --item-offset-label: 4px;

    outline: none;
    color: var(--text);
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    background-color: var(--background-primary); 
}

::-webkit-scrollbar-thumb {
    background-color: var(--primary); 
}

::-webkit-scrollbar-thumb:hover {
    cursor: pointer;
}

::selection {
    background: var(--secondary);
}

.drag {
    --webkit-app-region: drag;
}

.nodrag {
    --webkit-app-region: none;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;   /* Safari */
    -khtml-user-select: none;    /* Konqueror HTML */
    -moz-user-select: none;      /* Old versions of Firefox */
    -ms-user-select: none;       /* Internet Explorer/Edge */
    user-select: none;           /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

body {
    overflow: hidden;

    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;

    border-left: 2px solid var(--trim);
    border-top: 2px solid var(--trim);
    border-right: 2px solid var(--background-secondary);
    border-bottom: 2px solid var(--background-secondary);
    background-color: var(--background-primary);
}

/* =========================== */
/* TITLEBAR STYLING            */
/* =========================== */

#titlebar {
    width: 100%;
    height: 26px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;

    border-bottom: 2px solid var(--trim);

    background-image: linear-gradient(90deg, var(--accent), var(--primary));

    z-index: 2;
}

#titlebar > .info {
    display: flex;
    flex-direction: row;
    align-items: center;

    height: 100%;
}

#titlebar > .info > .text > p {
    font-size: 14px;
    color: var(--trim);
}

#titlebar > .info > .icon {
    width: 16px;
    height: 16px;
    margin: 0px 4px;
}

#titlebar > .info > .icon > img {
    width: 100%;
    height: 100%;
}

#titlebar > .buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 100%;
}

#titlebar > .buttons > button {
    position: relative;
    margin-right: 2px;
    height: 18px;
    width: 20px;

    background-color: var(--background-primary);

    transition: all .15s ease;
    font-size: var(--font-size-default);
    
    border-left: 2px solid var(--trim);
    border-top: 2px solid var(--trim);
    border-right: 2px solid var(--background-secondary);
    border-bottom: 2px solid var(--background-secondary);
}

#titlebar > .buttons > button > img {
    width: 100%;
    height: 100%;
}

#titlebar > .buttons > button:hover {
    cursor: pointer;
}

#titlebar > .buttons > button:active {
    padding-left: 1px;
    padding-top: 1px;
    border-right: 2px solid var(--trim);
    border-bottom: 2px solid var(--trim);
    border-left: 2px solid var(--background-secondary);
    border-top: 2px solid var(--background-secondary);
}

#titlebar > .buttons > button:not(:active):focus-visible:after {
    content: "";
    border: 1px dotted var(--background-secondary);
    border-radius: 3px;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

/* =========================== */
/* MAIN BODY STYLING           */
/* =========================== */

#main {
    width: calc(100% - 2px);
    flex-grow: 1;
    background-color: var(--background-primary);
}

/* =========================== */
/* CONTEXT MENU STYLING        */
/* =========================== */

#contextMenu {
    position: absolute;
    z-index: 10;

    background-color: var(--background-primary);
    border-left: 2px solid var(--trim);
    border-top: 2px solid var(--trim);
    border-right: 2px solid var(--background-secondary);
    border-bottom: 2px solid var(--background-secondary);

    min-width: 90px;
    height: auto;

    padding: 2px;
}

#contextMenu.hidden {
    display: none;
}

#contextMenu > .content {
    margin-left: 24px;
    border-left: 1px solid var(--background-secondary);
}

#contextMenu > .content > .group:not(:last-child) {
    border-bottom: 1px solid var(--background-secondary);
    margin-bottom: 2px;
}

#contextMenu > .content > .group:not(:last-child) > p:last-child {
    margin-bottom: 2px;
}

#contextMenu > .content > .group > p {
    font-size: var(--font-size-default);
    padding: 2px 4px;
    position: relative;
    cursor: pointer;
}

#contextMenu > .content > .group > p.active::before {
    content: "▶";
    position: absolute;
    left: -20px;
}

#contextMenu > .content > .group > p:not(.active)::before {
    content: "";
    position: absolute;
    left: -24px;
    height: calc(100% - 8px);
    width: 16px;
    padding: 2px 4px;
}

#contextMenu > .content > .group > p.active::after {
    content: "";
    border: 1px solid hsl(285, 32%, 59%);
    background-color: #bc95c95c;
    border-radius: 3px;
    position: absolute;
    top: 0px;
    left: -24px;
    padding: 2px 4px;
    width: calc(100% + 24px);
    height: 100%;
    box-sizing: border-box;
}

/* =========================== */
/* ELEMENT STYLING */
/* =========================== */

.frame.v > .element:not(:last-child) {
    margin-bottom: 8px;
}

.frame.h > .element:not(:last-child) {
    margin-right: 8px;
}

/* =========================== */
/* FRAME STYLING */
/* =========================== */

.frame {
    width: 100%;
    height: 100%;
    padding: 3px;
    display: flex;
    position: relative;
}

.frame.border {
    border: 1px solid var(--trim);
    padding: 6px;
    margin: 6px;

    width: calc(100% - 12px);
    height: calc(100% - 12px);
}

.frame > span {
    position: absolute;
    top: -9px;
    font-size: var(--font-size-default);
    background-color: var(--background-primary);
    border-left: 4px solid var(--background-primary);
    border-right: 4px solid var(--background-primary);
}

.frame.h {
    flex-direction: row;
}

.frame.v {
    flex-direction: column;
}

.frame.va {
    height: auto;
    flex-direction: column;
}

.frame.ha {
    width: auto;
    flex-direction: row;
}

.frame.ah {
    align-items: center;
}

.frame.av {
    justify-content: center;
}

.frame.ac {
    align-items: center;
    justify-content: center;
}

/* =========================== */
/* BUTTON STYLING              */
/* =========================== */

.button {
    border: 1.5px solid var(--background-secondary);
    position: relative;
}

.button > button {
    padding: 4px 16px;

    background-color: var(--background-primary);

    transition: all .15s ease;
    font-size: var(--font-size-default);
    
    border-left: 2px solid var(--trim);
    border-top: 2px solid var(--trim);
    border-right: 2px solid var(--background-secondary);
    border-bottom: 2px solid var(--background-secondary);

    outline: none;
}

.button > button:hover {
    cursor: pointer;
}

.button > button:active {
    padding-left: 17px;
    padding-top: 5px;
    border-right: 2px solid var(--trim);
    border-bottom: 2px solid var(--trim);
    border-left: 2px solid var(--background-secondary);
    border-top: 2px solid var(--background-secondary);
}

.button > button:not(:active):focus-visible:after {
    content: "";
    border: 1px dotted var(--background-secondary);
    border-radius: 3px;
    position: absolute;
    top: 4px;
    left: 4px;
    padding: 4px 16px;
    width: calc(100% - 8px);
    height: calc(100% - 8px);
    box-sizing: border-box;
}

/* =========================== */
/* LABEL STYLING               */
/* =========================== */

.label {
    font-size: 14px;
}

/* =========================== */
/* IMAGE STYLING               */
/* =========================== */

.image {
    position: relative;
}

.image > img {
    width: 100%;
    height: 100%;
}

